fix: chat meta alignment, diffusion image layout, and message error spacing

--- a/assets/styles/components/_spirit_chat.scss
+++ b/assets/styles/components/_spirit_chat.scss
@@ -177,7 +177,7 @@
             }
 
             &.chat-message-error {
-                margin-bottom: 1rem 0rem;
+                margin: 1rem 0rem;
             }
             
             .chat-bubble {
